# SelfHostedDeployTest

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  lint.yml
app/: application.py
app/config/: __init__.py  constants.py  cors.py  csrf.py  database.py  open_api.py  settings.py  static_files.py  templates.py  vite.py
app/controllers/: __init__.py
app/controllers/api/: __init__.py  todos.py
app/controllers/web/: __init__.py  controller.py
app/controllers/web/templates/: index.html.j2
app/models/: base.py  todo.py
app/repo/: __init__.py  todos.py
app/schema/: __init__.py  base.py  todo.py
public/: manifest.json
resources/: App.svelte  api.ts  main.ts  styles.css
resources/lib/: TodoForm.svelte  TodoList.svelte
resources/store/: todos.svelte.ts
resources/types/: todo.ts
